test/data/semantic-errors/too-many-arguments.ava
var thisFunction = (x, y) -> x + y;
thisFunction(2,3,4);